k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-dep
  namespace: myProj
spec:
  replicas: 5
  selector:
    matchLabels:
      app: myapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: java-app
          image:697886065243.dkr.ecr.ap-south-1.amazonaws.commyimage:7
          ports:
            - containerPort: 8090
