k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
  namespace: myProj
spec:
  type: ClusterIP
  ports:
    - port: 8090
  selector:
    app: myapp
